@@ -5,7 +5,7 @@ use English;
 use Error::Pure::Utils qw(clean);
 use Mo::utils::URI qw(check_url);
 use Readonly;
-use Test::More 'tests' => 12;
+use Test::More 'tests' => 13;
 use Test::NoWarnings;
 
 Readonly::Array our @RIGHT_URLS => qw(
@@ -36,7 +36,14 @@ foreach my $right_url (@RIGHT_URLS) {
 # Test.
 $self = {};
 $ret = check_url($self, 'key');
-is($ret, undef, 'Right not exist key.');
+is($ret, undef, 'Right URL is present (no key).');
+
+# Test.
+$self = {
+	'key' => undef,
+};
+$ret = check_url($self, 'key');
+is($ret, undef, 'Right URL is present (undef).');
 
 # Test.
 foreach my $bad_url (@BAD_URLS) {
