@@ -1,4 +1,5 @@
 0.03
+ - API change: The undef value is possible for all checks.
  - Update copyright years.
 
 0.02 2024-02-29T22:04:40+01:00
